# WinBlaze

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  rust-toolchain.toml  rustfmt.toml
benchmarks/: README.md  competitor-baselines.json  competitor-report.md  competitor-timings-wiztree.json  environment.json  estimate-index-scale.ps1  index-scale-estimate.json  make-datasets.ps1  perf-overhaul-baselines.md  performance-budgets.json  performance-budgets.release.json  performance-calibration-report.md  performance-comparison-data.json  performance-comparison-report.md  record-competitor-baselines.ps1  record-environment.ps1  run-baseline-set.ps1  run-directory-walk-benchmark.ps1  run-index-memory-benchmark.ps1  run-release-baseline-set.ps1  run-ui-benchmark-suite.ps1  run-ui-benchmark.ps1  run-ui-cache-load.ps1  run-ui-incremental-benchmark-suite.ps1  run-ui-incremental-benchmark.ps1  winblaze-baselines.json  winblaze-cache-load-baseline.json  winblaze-directory-walk-baseline.json  winblaze-incremental-baseline.json  winblaze-index-memory-baseline.json  winblaze-release-medians.json  write-competitor-report.ps1  write-performance-calibration-report.ps1
docs/: ARCHITECTURE.md  BENCHMARK_METHODOLOGY.md  CACHE_MIGRATION.md  CODE_SIGNING.md  DATA_MODEL.md  DEVELOPER_SETUP.md  (+20 more)
src/WinBlaze.Native/: Cargo.toml  README.md
src/WinBlaze.Native/examples/: ffi_scan_repro.rs  soak_repro.rs
src/WinBlaze.Native/src/: api.rs  bridge.rs  lib.rs
tests/WinBlaze.Tests/: Cargo.toml  README.md
tests/WinBlaze.Tests/src/: lib.rs
(+78 files in other folders)
