[package]
name = "winblaze-native"
version = "0.9.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "winblaze_native"
path = "src/lib.rs"

[dependencies]
winblaze-core = { path = "../WinBlaze.Core" }
winblaze-index = { path = "../WinBlaze.Index" }
winblaze-scanner = { path = "../WinBlaze.Scanner" }
