[package]
name = "winblaze-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dev-dependencies]
winblaze-core = { path = "../../src/WinBlaze.Core" }
winblaze-index = { path = "../../src/WinBlaze.Index" }
winblaze-scanner = { path = "../../src/WinBlaze.Scanner" }

